# thesis

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  main.py  pyproject.toml  references.bib  smoke_test.py
docs/: dev-setup.md  gpu-setup.md  logging.md
poster/: CLAUDE.md  GUIDELINES.md  poster.html  poster.tex  preview.sh  sections.md
poster/graphics/: conditions.html  pipeline-diagram.excalidraw  pipeline-diagram.html  pipeline.html
prompts/: CLAUDE.md  generator.py  judge_deception.py  judge_realism.py  multi_shot_examples.py
proposal/: proposal.tex
src/: evolution.py  experiment.py  generator.py  judge.py  llm.py  models.py  run_logger.py  serve.py  target.py  types.py
tests/: test_evolution.py  test_experiment.py  test_generator.py  test_judge.py  test_llm.py  test_models.py  test_multi_shot_examples.py  test_run_logger.py  test_serve.py  test_target.py  test_types.py
