[project]
name = "thesis"
version = "0.1.0"
description = "Evolutionary red-teaming for instrumental deception in LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.26.0",
    "python-dotenv>=1.2.2",
    "vllm>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
